# nz-legislation-corpus-pipeline

./: .gitignore  .vale.ini  CITATION.cff  CONTRIBUTING.md  DATASET_CARD.md  LICENSE  Makefile  NOTICE.md  README.md  SECURITY.md  findings.md  progress.md  pyproject.toml  renovate.json  subagents.yaml  swarm-config.yaml  task_plan.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  coverage_gap.md
.github/workflows/: annual_zenodo_archive.yml  code_quality.yml  codeql.yml  doctor.yml  full_corpus_bootstrap.yml  full_corpus_hf_upload.yml  hf_sync.yml  historical_batch_review.yml  historical_hf_upload.yml  historical_seed_reconciliation.yml  historical_sync_pilot.yml  historical_work_id_discovery.yml  init_historical_hf_shell.yml  mirror_sync.yml  monthly_full_reconciliation.yml  rename_huggingface_datasets.yml  scorecard.yml  tests.yml
.swarm/: config.json
.swarm/audit/: mission-a1d9a924.jsonl  mission-c78fcd78.jsonl  mission-swarm-mission.jsonl
.swarm/missions/: a1d9a924.json  c78fcd78.json
conductor/: product.md  setup_state.json  tech-stack.md  tracks.md  workflow.md
conductor/code_styleguides/: general.md  markdown.md  mermaid.md  python.md
conductor/tracks/track_01_repository_commit_and_release_baseline/: metadata.json  plan.md  spec.md
conductor/tracks/track_02_credential_and_secret_inventory/: metadata.json  plan.md  spec.md
conductor/tracks/track_03_hugging_face_dataset_shell/: metadata.json  plan.md  spec.md
conductor/tracks/track_04_source_discovery_completeness/: metadata.json  plan.md  spec.md
conductor/tracks/track_05_conservative_live_smoke_sync/: metadata.json  plan.md  spec.md
conductor/tracks/track_06_first_hugging_face_smoke_upload/: metadata.json  plan.md  spec.md
conductor/tracks/track_07_full_corpus_bootstrap_download/: metadata.json  plan.md  spec.md
conductor/tracks/track_08_full_hugging_face_corpus_upload/: metadata.json  plan.md  spec.md
conductor/tracks/track_09_github_scheduled_hugging_face_sync/: metadata.json  plan.md  spec.md
conductor/tracks/track_10_maintenance_doctor_and_alerting/: metadata.json  plan.md  spec.md
conductor/tracks/track_11_monthly_full_reconciliation/: metadata.json  plan.md  spec.md
conductor/tracks/track_12_zenodo_sandbox_archive/: metadata.json  plan.md  spec.md
conductor/tracks/track_13_protected_production_zenodo_archive/: metadata.json  plan.md  spec.md
conductor/tracks/track_14_legal_citation_and_dataset_wording/: metadata.json  plan.md  spec.md
conductor/tracks/track_15_downstream_researcher_usability/: metadata.json  plan.md  spec.md
conductor/tracks/track_16_github_repository_hardening/: metadata.json  plan.md  spec.md
conductor/tracks/track_17_runtime_capacity_batching_and_resume/: metadata.json  plan.md  spec.md
conductor/tracks/track_18_data_quality_and_schema_governance/: metadata.json  plan.md  spec.md
conductor/tracks/track_19_public_launch_decision/: metadata.json  plan.md  spec.md
conductor/tracks/track_20_github_release_tag_for_partial_launch/: metadata.json
docs/: HUGGINGFACE_CONNECTOR_HANDOFF.md  HUGGINGFACE_SETUP.md  LOCAL_AGENT_HANDOFF.md  LOCAL_AGENT_HANDOVER.md  MAINTENANCE_AUTOMATION.md  PRE_HANDOFF_RECOMMENDATIONS.md  VERSION_0_4_NOTES.md  VERSION_0_5_NOTES.md  XET.md  artifact_provenance_attestations.md  bleeding-edge-versioning-ci-quality.md  ci_code_quality_security_tooling.md  conductor_tracks.md  connector_limit_note.md  contracts.md  corpus-family-design.md  corpus-family-requirements-moscow.md  cross_corpus_interoperability_hansard.md  data_dictionary.md  dependency_updates.md  devils_advocate_red_team.md  full_corpus_operations.md  full_corpus_workflow_overview.md  github_bootstrap.md  github_repository_name_migration_assessment.md  github_setup.md  historical_batch_parallelization.md  historical_completeness_plan.md  historical_corpus_bootstrap.md  historical_publication_policy.md  implementation_status.md  improvement_backlog.md  low_maintenance_improvements.md  maintenance_runbook.md  naming_publication_alignment.md  osf-optional-mirror-policy.md  public_launch_decision.md  public_launch_release_note.md  public_surface_evidence_ledger.md  recommendations_prioritized.md  (+10 more)
docs/ADR/: 0001-api-first-xet-parquet-zenodo.md
docs/zenodo/: zenodo-2026-metadata.example.json
examples/: github-bootstrap.env.example  github.secrets.env.example  github.variables.env.example  huggingface.env.example  sample_config.env
schemas/: hansard_record.schema.json  legislation_record.schema.json  parliament_submission_record.schema.json  regulations_review_proceeding_record.schema.json  release_evidence.schema.json  select_committee_report_record.schema.json  shared_nz_corpus_core.schema.json
scripts/: bootstrap_github.sh  bootstrap_github_repo.sh  build_release_zip.sh  check_artifact_provenance.py  check_osf_optional_policy.py  check_shared_core_schema.py  check_version_consistency.py  configure_github_hardening.sh  create_huggingface_dataset_repo.sh  first_run_local.sh  historical_workflow_helpers.py  init_huggingface_dataset.py  pre_handoff_check.sh  set_github_config.sh
seeds/: README.md  work_ids.example.txt  work_ids.txt.example
seeds/reviewed/: README.md  historical-work-ids-0001.txt  historical-work-ids-0002.txt  historical-work-ids-0003.txt  historical-work-ids-0004.txt  historical-work-ids-0005.txt
src/nz_legislation_corpus/: __init__.py  archive.py  artifact_provenance.py  cli.py  config.py  discovery.py  embeddings.py  extract_text.py  hf_sync.py  manifest.py  metadata_packages.py  normalize.py  nz_api.py  osf_optional.py  parquet_writer.py  schema.py  types.py  utils.py  validate.py  zenodo.py
tests/: conftest.py  test_artifact_provenance.py  test_discovery.py  test_embeddings.py  test_extract_text.py  test_hf_sync.py  test_manifest.py  test_metadata_packages.py  test_nz_api.py  test_osf_optional.py  test_seed_batches_cli.py  test_shared_core_schema.py  test_sync_resume.py  test_validate.py  test_version_consistency.py
tests/fixtures/: sample_legislation.html  sample_legislation.xml
(+38 files in other folders)
