[project]
name = "corpus-legislation-nz"
version = "0.5.0"
description = "API-first NZ legislation corpus pipeline: NZ Legislation API -> optimized Parquet -> Hugging Face/Xet -> annual Zenodo archives."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Maintainer" }]
dependencies = [
  "requests>=2.32.0",
  "click>=8.1.0",
  "typer>=0.26.7",
  "rich>=15.0.0,<16",
  "pyarrow>=21.0.0",
  "polars>=1.0.0",
  "defusedxml>=0.7.1",
  "huggingface_hub>=0.34.0",
  "hf-xet>=1.1.0",
  "jsonschema>=4.22.0",
  "zstandard>=0.23.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0", "ruff>=0.15.16", "ty>=0.0.46", "pre-commit>=4.0.0"]
embeddings = ["FlagEmbedding>=1.2.0", "torch>=2.0.0", "transformers>=5.10.2"]

[project.scripts]
nzlc = "nz_legislation_corpus.cli:app"

[build-system]
requires = ["hatchling>=1.30.1"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nz_legislation_corpus"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ty.environment]
root = ["src", "tests", "scripts"]
python-version = "3.11"

[tool.ty.rules]
all = "error"
